feat: integrate react-scroll for smooth scrolling and add legal pages with styles

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,5 +1,5 @@
 @use "./font.scss";
-section.section-about {
+.section-about {
 	background: #f8f8f8;
 	border-radius: 50px 50px 0 0;
 	padding: clamp(20px, 3vw, 60px);
