--- a/src/styles/comparision.scss
+++ b/src/styles/comparision.scss
@@ -1,6 +1,6 @@
 @use "./font";
 
-section.section-comparision {
+.section-comparision {
     padding: clamp(20px, 5vw, 60px);
     width: 100%;
     height: 100%;
