feat: update video sources to use Cloudinary links and adjust styles in various components

--- a/src/styles/comparision.scss
+++ b/src/styles/comparision.scss
@@ -54,7 +54,7 @@
     }
 }
 @media (max-width: 768px) {
-    section.section-comparision {
+    .section-comparision {
         padding: clamp(15px, 5vw, 30px);
         div.comparision-heading-section{
             h4 {
@@ -68,6 +68,9 @@
             flex-direction: column;
             div.comparision-content-video {
                 display: none;
+                video{
+                    display: none;
+                }
             }
             div.comparision-timeline-content{
                 width: 100%;
