--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -88,7 +88,7 @@
 	}
 }
 @media (max-width: 768px) {
-	section.section-work {
+	.section-work {
 		div.work-content {
 			flex-direction: column;
 			div.work-heading-top-section,
