--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -18,20 +18,23 @@
 		}
 	}
 	div.services-content-section {
+		width: 100%;
+		height: 100%;
 		display: grid;
-        margin-top: clamp(20px, 5vw, 60px);
 		grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+        margin-top: clamp(20px, 3vw, 40px);
 		gap: clamp(20px, 5vw, 60px);
         div.service-card {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-            border:1px solid #31ff41;
-            border-radius: 10px;
-            padding: clamp(15px, 3vw, 30px);
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			gap: clamp(10px, 2vw, 20px);
+			width: 100%;
+			height: 100%;
+			border: 1px solid #31ff41;
+			border-radius: 10px;
+			padding: clamp(15px, 3vw, 30px);
             box-shadow: 0 4px 6px rgba(49, 255, 65, .5);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             &:hover {
@@ -72,7 +75,7 @@
             grid-template-columns: 1fr;
             gap: clamp(15px, 4vw, 30px);
             div.service-card {
-                padding: clamp(10px, 2vw, 20px);
+				padding: clamp(10px, 2vw, 20px);
                 h6 {
                     font-size: clamp(1.25rem, 3vw, 2rem);
                 }
