--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -159,7 +159,7 @@ main {
 			gap: clamp(15px, 2vw, 30px);
 			text-align: center;
 			h1 {
-				font-size: clamp(1.75rem, 5.5vw, 7rem);
+				font-size: clamp(2.65rem, 5.5vw, 7rem);
 				width: clamp(70%, 80%, 80%);
 				letter-spacing: 2px;
 				font-family: "BW-Gradual", sans-serif;
@@ -172,9 +172,10 @@ main {
 			}
 
 			p {
-				width: clamp(45%, 50%, 55%);
+				width: clamp(50%, 55%, 60%);
 				text-align: center;
-				font-size: clamp(1rem, 2vw, 3rem);
+				font-size: clamp(1.25rem, 2vw, 3rem);
+				line-height: 1.35;
 				font-family: "Urbanist", sans-serif;
 			}
 
